alb.tf
####################################################
# Target Group Creation
####################################################

resource "aws_lb_target_group" "tg" {
  name        = "TargetGroup"
  port        = 80
  target_type = "instance"
  protocol    = "HTTP"
  vpc_id      = aws_vpc.vpc.id
}

####################################################
# Target Group Attachment with Instance
####################################################

#resource "aws_alb_target_group_attachment" "tgattachment" {
# count            = length(aws_instance.wordpress)
##  target_group_arn = aws_lb_target_group.tg.arn
 ## target_id        = aws_autoscaling_group.web.id
#  port = 80
#   }

####################################################
# Application Load balancer
####################################################

resource "aws_lb" "lb" {
  name               = "ALB"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.wrodpress-sg.id, ]
  subnets            = aws_subnet.public_subnet.*.id
  #  subnets = [for subnet in aws_subnet.public_subnet : subnet.id]
}

####################################################
# Listner
####################################################

resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.lb.arn
  port              = "80"
  protocol          = "HTTP"

  #  default_action {
  #    type = "redirect"

  #    redirect {
  #      port        = "443"
  #      protocol    = "HTTPS"
  #      status_code = "HTTP_301"
  #    }
  #  }

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }


}


####################################################
# Listener Rule
####################################################

resource "aws_lb_listener_rule" "static" {
  listener_arn = aws_lb_listener.front_end.arn
  priority     = 100

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg.arn

  }

  condition {
    path_pattern {
      values = ["/var/www/html/hello.html"]
    }
  }
}
